--- a/code/betaVAE.ipynb
+++ b/code/betaVAE.ipynb
@@ -33,6 +33,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "4fae0n2GeLSX"
+      },
+      "outputs": [],
       "source": [
         "class dSpritesDataset(Dataset):\n",
         "    def __init__(self, imgs, transform=None):\n",
@@ -58,30 +63,30 @@
         "\n",
         "batch_size = 64\n",
         "data_loader = DataLoader(dsprites_dataset, batch_size=batch_size, shuffle=True)"
-      ],
-      "metadata": {
-        "id": "4fae0n2GeLSX"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "2MFBATqTbnyn"
+      },
+      "outputs": [],
       "source": [
         "# Hyperparameters\n",
         "\n",
         "z_dim = 6 # for dsprites dataset\n",
         "beta = 4\n",
         "learning_rate = 1e-4"
-      ],
-      "metadata": {
-        "id": "2MFBATqTbnyn"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "aJS7RaO61y7K"
+      },
+      "outputs": [],
       "source": [
         "class Encoder(nn.Module):\n",
         "    def __init__(self, z_dim, n_channels=1, n_filters=32):\n",
@@ -155,12 +160,7 @@
         "        BCE = F.binary_cross_entropy_with_logits(x_recon, x, reduction='sum')\n",
         "        KLD = -0.5 * torch.sum(1 + log_var - mu.pow(2) - log_var.exp())\n",
         "        return BCE + self.beta * KLD"
-      ],
-      "metadata": {
-        "id": "aJS7RaO61y7K"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -191,9 +191,59 @@
         "    print('====> Epoch: {} Average loss: {:.4f}'.format(epoch, train_loss / len(data_loader.dataset)))\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# visualize the disentangled representations\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def plot_reconstructions(model, data_loader, device, n=10):\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        for i, data in enumerate(data_loader):\n",
+        "            data = data.to(device)\n",
+        "            recon_batch, mu, logvar = model(data)\n",
+        "            data = data.cpu()\n",
+        "            recon_batch = recon_batch.cpu()\n",
+        "            for i in range(n):\n",
+        "                plt.subplot(2, n, i + 1)\n",
+        "                plt.imshow(data[i].squeeze(), cmap='gray')\n",
+        "                plt.axis('off')\n",
+        "                plt.subplot(2, n, i + 1 + n)\n",
+        "                plt.imshow(recon_batch[i].squeeze(), cmap='gray')\n",
+        "                plt.axis('off')\n",
+        "            plt.show()\n",
+        "            break\n",
+        "\n",
+        "plot_reconstructions(model, data_loader, device)\n",
+        "\n",
+        "# visualize the disentangled representations\n",
+        "\n",
+        "def plot_latent_space(model, data_loader, device):\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        for i, data in enumerate(data_loader):\n",
+        "            data = data.to(device)\n",
+        "            mu, logvar = model.encoder(data)\n",
+        "            mu = mu.cpu().numpy()\n",
+        "            plt.scatter(mu[:, 0], mu[:, 1], c=mu[:, 2], cmap='viridis', s=2)\n",
+        "            plt.colorbar()\n",
+        "            plt.show()\n",
+        "            break\n"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -209,12 +259,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.12"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
