attempt to debug betaVAE

--- a/code/betaVAE.ipynb
+++ b/code/betaVAE.ipynb
@@ -89,28 +89,32 @@
       "outputs": [],
       "source": [
         "class Encoder(nn.Module):\n",
-        "    def __init__(self, z_dim, n_channels=1, n_filters=32):\n",
+        "    def __init__(self, z_dim=10, h_dim=128, n_channels=1, n_filters=32, kernel_size=4, stride=2, padding=1):\n",
         "        super(Encoder, self).__init__()\n",
         "\n",
         "        self.n_filters = n_filters\n",
+        "        self.kernel_size = kernel_size\n",
+        "        self.h_dim = h_dim\n",
+        "        self.z_dim = z_dim\n",
         "\n",
-        "        self.conv1 = nn.Conv2d(n_channels, n_filters, kernel_size=4, stride=2, padding=1)\n",
-        "        self.conv2 = nn.Conv2d(n_filters, n_filters, kernel_size=4, stride=2, padding=1)\n",
-        "        self.conv3 = nn.Conv2d(n_filters, n_filters*2, kernel_size=4, stride=2, padding=1)\n",
-        "        self.conv4 = nn.Conv2d(n_filters*2, n_filters*2, kernel_size=4, stride=2, padding=1)\n",
-        "        self.fc = nn.Linear(4 * 4 * n_filters * 2, 128)\n",
-        "        self.fc_mu = nn.Linear(128, z_dim)\n",
-        "        self.fc_logvar = nn.Linear(128, z_dim)\n",
+        "        self.conv1 = nn.Conv2d(n_channels, n_filters, kernel_size=kernel_size, stride=stride, padding=padding)\n",
+        "        self.conv2 = nn.Conv2d(n_filters, n_filters, kernel_size=kernel_size, stride=stride, padding=padding)\n",
+        "        self.conv3 = nn.Conv2d(n_filters, n_filters*2, kernel_size=kernel_size, stride=stride, padding=padding)\n",
+        "        self.conv4 = nn.Conv2d(n_filters*2, n_filters*2, kernel_size=kernel_size, stride=stride, padding=padding)\n",
+        "        self.fc = nn.Linear(self.kernel_size * self.kernel_size * n_filters * 2, self.h_dim)\n",
+        "        self.fc2 = nn.Linear(self.h_dim, self.z_dim * 2)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        x = F.relu(self.conv1(x))\n",
-        "        x = F.relu(self.conv2(x))\n",
-        "        x = F.relu(self.conv3(x))\n",
-        "        x = F.relu(self.conv4(x))\n",
-        "        x = x.view(-1, 4 * 4 * self.n_filters * 2)\n",
-        "        x = self.fc(x)\n",
-        "        mu = self.fc_mu(x)\n",
-        "        logvar = self.fc_logvar(x)\n",
+        "        out = F.relu(self.conv1(x))\n",
+        "        out = F.relu(self.conv2(out))\n",
+        "        out = F.relu(self.conv3(out))\n",
+        "        out = F.relu(self.conv4(out))\n",
+        "        out = out.view(-1, self.kernel_size * self.kernel_size * self.n_filters * 2)\n",
+        "        out = self.fc(out)\n",
+        "        z = self.fc2(out)\n",
+        "\n",
+        "        mu = z[:, :self.z_dim]\n",
+        "        logvar = z[:, self.z_dim:]\n",
         "        return mu, logvar\n",
         "\n",
         "\n",
